--- a/Fruit360_classifier_ViT.ipynb
+++ b/Fruit360_classifier_ViT.ipynb
@@ -6,7 +6,7 @@
         "id": "MGFgjX2y2NkI"
       },
       "source": [
-        "# Fruit classifier"
+        "# Fruit classifier - Vision Transformer ViT"
       ]
     },
     {
@@ -32,6 +32,15 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reference used in this project: https://www.kaggle.com/raufmomin/vision-transformer-vit-fine-tuning"
+      ],
+      "metadata": {
+        "id": "DEBR5RhBMWfz"
+      }
     },
     {
       "cell_type": "code",
